[package]
name = "rusty_sumoparse"
version = "0.1.0"
authors = ["Lachlan Kermode <lachlan.kermode@halter.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
csv = "1.0.0-beta.5"
